# qbot

./: .env.example  .gitignore  AGENTS.md  README.md  bot.py  pyproject.toml  start.sh
docs/: technical-report.md
fonts/: README.md
src/qbot/: __init__.py  analyzer.py  bucketizer.py  collector.py  config.py  models.py  parser.py  plotter.py  plugin.py  ranker.py  repository.py  service.py  setops.py
tests/: test_analyzer.py  test_bucketizer.py  test_env_and_log_match.py  test_parser.py  test_repository_command_usage.py  test_service_rank.py  test_setops.py
